apps/docker-registry/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  labels:
    name: registry
