apps/docker-registry/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: registry
