apps/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - backend:
              service:
                name: registry
                port:
                  number: 5000
            path: "/"
            pathType: Prefix
  tls:
    - hosts:
        - registry
